# PYQ2K

./: .gitignore  README.md
examples/: chicamocha_sensibilidad.py  chicamocha_simulacion.json  chicamocha_t1_sensibilidad.py  chicamocha_t1_simulacion.json
model/: README.md  modelo_chicamocha.py  modelo_tota_chiquito.py  modelo_vargas.py  pipeline_modelo_calidad.py
qual2k/: pyproject.toml  requirements.txt
qual2k/analysis/: plotter.py  results_analyzer.py
qual2k/core/: calibrator.py  calibrator_general.py  calibrator_global.py  config.py  model.py  simulator.py
qual2k/processing/: __init__.py  data_processor.py  file_writer.py  json_loader.py
scripts/: run_from_json.py  sensibilidad.py
tests/: calibration.py
webapp/: requirements_web.txt  run_server.bat
webapp/apps/simulator/: admin.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
webapp/apps/simulator/migrations/: 0001_initial.py  0002_add_generar_comparacion.py  0003_simulationrun_config_rates_light.py
webapp/apps/simulator/templatetags/: simulator_extras.py
webapp/config/: settings.py  urls.py
webapp/static/js/: poll_status.js
webapp/templates/: base.html
webapp/templates/simulator/: index.html  pipeline_detail.html  pipeline_new.html  project_detail.html  project_new.html  run_configure.html  run_detail.html  run_edit_input.html  run_new.html  run_preview.html  scenarios.html
webapp/templates/simulator/partials/: graph_gallery.html  kge_table.html  manual_tables.html  status_badge.html
